Width fixes for mobile

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ tw-story[tags="title"] {
 
 
 [**© 2025 Kyrie D&#39;Agostino (Bucharest, Romania)**]</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/thefool.png&quot; width=&quot;50%&quot;&gt;
+&lt;img src=&quot;img/thefool.png&quot; max-width=&quot;50%&quot;&gt;
 &lt;audio controls&gt;
   &lt;source src=&quot;aud/thefoolsong.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
 Your browser does not support the audio element.
@@ -309,7 +309,7 @@ Your browser does not support the audio element.
 
 
 [[back|Main]]</tw-passagedata><tw-passagedata pid="4" name="Katherina" tags="" position="800,0" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/katherina.png&quot; width=&quot;50%&quot;&gt;
+&lt;img src=&quot;img/katherina.png&quot; max-width=&quot;50%&quot;&gt;
 &lt;audio controls&gt;
   &lt;source src=&quot;aud/katherinasong.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
 Your browser does not support the audio element.
@@ -318,7 +318,7 @@ Your browser does not support the audio element.
 
 
 [[back|Music]]</tw-passagedata><tw-passagedata pid="5" name="Samsara" tags="" position="600,0" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/samsara.png&quot; width=&quot;50%&quot;&gt;
+&lt;img src=&quot;img/samsara.png&quot; max-width=&quot;50%&quot;&gt;
 &lt;audio controls&gt;
   &lt;source src=&quot;aud/samsarasong.wav&quot; type=&quot;audio/wav&quot;&gt;
 Your browser does not support the audio element.
@@ -327,7 +327,7 @@ Your browser does not support the audio element.
 
 
 [[back|Music]]</tw-passagedata><tw-passagedata pid="6" name="Metamorphage" tags="" position="600,200" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/jackmiller.png&quot; width=&quot;50%&quot;&gt;
+&lt;img src=&quot;img/jackmiller.png&quot; max-width=&quot;50%&quot;&gt;
 &lt;audio controls&gt;
   &lt;source src=&quot;aud/metamorphagesong.wav&quot; type=&quot;audio/wav&quot;&gt;
 Your browser does not support the audio element.
