--- a/index.html
+++ b/index.html
@@ -305,11 +305,7 @@ tw-passage audio {
 #(text-colour:red)[The Red Archive]
 
 [[see my pixel art &amp; songs|Music]]
-[[read the red king as it is rewritten|Red King]]
-
-
-
-[**© 2025 Kyrie D&#39;Agostino (Bucharest, Romania)**]</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
+[[read the red king as it is rewritten|Red King]]</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
 &lt;img src=&quot;img/thefool.png&quot;&gt;
 &lt;audio controls controlsList=&quot;nodownload&quot;&gt;
   &lt;source src=&quot;aud/thefoolsong.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
@@ -669,7 +665,7 @@ And his subjects accepted it, for they had never quite known warmth before.
 
 ---
 
-Far, far away, in a place where even stories have trouble walking...
+Far, far away, in a place where even stories have trouble breathing...
 There lived an Empress.
 
 This Empress was old and wise. Much older than the King, for a fact.
@@ -760,8 +756,8 @@ The jester felt his heartbeat against her fingertip.
 
 &quot;I?&quot; he asked. &quot;Go to the King? Why would he listen to me?&quot;
 
-Her voice dropped lower—
-not commanding, but longing.
+Her voice dropped lower.
+This wasn&#39;t an order, he thought.
 
 &quot;I would ask something of you, little wanderer. Something no soldier, no scholar, no noble could ever achieve for me.&quot;
 
