--- a/index.html
+++ b/index.html
@@ -805,11 +805,11 @@ and became her emissary.
 
 It were a red hazy hue all over Venus.
 
-The blizzard was unceasing, aye, but his light stayed it off. Reflected it off her like some sorta grand shield.
+The blizzard was unceasing, aye, but his light staved it off. Reflected it off her like some sorta grand shield.
 
-Katherina trudged through the snow, her legs still weak, the clothes he’d conjured for her thin yet warm in a way no fabric ever had the right to be. A silky red dress, soft and warm.
+Katherina trudged through the snow, her legs still weak, the clothes he’d conjured for her thin yet warm in a way no fabric ever had the right to be. A silky red dress..
 
-He&#39;d been floating above and she&#39;d been walking below his gaze, deep in thought. In that strange, depthless black above her, the shape waited. Hovering, anticipating, a bright red light in the thick clouds, one bright indeed but not bright enough to substitute a **SUN**.
+She&#39;d been walking below his gaze, deep in thought. In that strange, depthless black above her, the shape waited. Hovering, anticipating, a bright red light in the thick clouds, one bright indeed but not bright enough to substitute a **SUN**.
 
 The two were en route to her humble abode, that it were.
 
@@ -841,7 +841,7 @@ She bowed her head, cheeks warming in a shy flush she did not understand. &quot;
 
 They walked like that for a while—her tiny steps, his enormous silence—until she dared another question.
 
-&quot;Um… sir? Why speak to me? There were the two ladies… the ones in robes… and I’ve seen so many names on the walls. So many girls who must’ve been braver than I am. Why me?&quot;
+&quot;Um… sir? Why speak to me? There were the two ladies… the ones in robes… and I’ve seen so many names on the walls. So many girls who must’ve been here before. Why me?&quot;
 
 The snow fell in smaller flakes.
 
@@ -862,7 +862,7 @@ Her breath caught. &quot;Did I?&quot;
 
 The red glow rippled, almost as if amused.
 
-**&quot;CALL ME WHATEVER MAKES THE FEAR SMALL ENOUGH FOR YOU TO HOLD.&quot;**
+**&quot;I AM WHATEVER MAKES THE FEAR SMALL ENOUGH FOR YOU TO HOLD.&quot;**
 
 She thought for a moment.
 
