--- a/index.html
+++ b/index.html
@@ -124,10 +124,8 @@ tw-passage tw-link:hover,
 tw-dialog-links tw-link:hover {
     color: #3f1313;
 }
-
 tw-passage tw-link::after,
 tw-dialog-links tw-link::after {
-    content: " ∽";
     opacity: 0.6;
     transition: opacity 0.25s;
 }
@@ -301,56 +299,47 @@ tw-passage audio {
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">document.head.insertAdjacentHTML(
   "beforeend",
   '<meta name="viewport" content="width=device-width, initial-scale=1">'
-);</script><tw-tag name="default" color="none"></tw-tag><tw-passagedata pid="1" name="Main" tags="" position="800,400" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-#(text-colour:red)[The Red Archive]
+);</script><tw-tag name="default" color="none"></tw-tag><tw-passagedata pid="1" name="Main" tags="" position="800,400" size="100,100">#The Red Archive
 
-[[see my pixel art &amp; songs|Music]]
-[[read the red king as it is rewritten|Red King]]</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/thefool.png&quot;&gt;
+(align:&quot;=&gt;&lt;=&quot;)[=
+^^[[see my pixel art &amp; songs|Music]]^^
+^^[[read the red king as it is rewritten|Red King]]^^</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">&lt;img src=&quot;img/thefool.png&quot;&gt;
 &lt;audio controls controlsList=&quot;nodownload&quot;&gt;
   &lt;source src=&quot;aud/thefoolsong.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
 Your browser does not support the audio element.
 &lt;/audio&gt;
 
-[[back|Music]]</tw-passagedata><tw-passagedata pid="3" name="Music" tags="" position="800,200" size="100,100">&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;\
-(text-colour:red)[**All of these works have been released on Bandcamp and Soundcloud.**]
+[[back|Music]]</tw-passagedata><tw-passagedata pid="3" name="Music" tags="" position="800,200" size="100,100">(text-colour:red)[**All of these works have been released on Bandcamp and Soundcloud.**]
 
 [[Katherina: Duet with Red Bastard|Katherina]]
 [[The Fool: Monologue with Red Thing|Fool]]
 [[Metamorphage|Metamorphage]]
 [[Samsara|Samsara]]
 
-[[back|Main]]</tw-passagedata><tw-passagedata pid="4" name="Katherina" tags="" position="800,0" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/katherina.png&quot;&gt;
+[[back|Main]]</tw-passagedata><tw-passagedata pid="4" name="Katherina" tags="" position="800,0" size="100,100">&lt;img src=&quot;img/katherina.png&quot;&gt;
 &lt;div id=&quot;audiowrap&quot;&gt;&lt;audio controls controlsList=&quot;nodownload&quot;&gt; &lt;source src=&quot;aud/katherinasong.mp3&quot; type=&quot;audio/mpeg&quot;&gt; Your browser does not support HTML5 Audio&lt;/audio&gt;&lt;/div&gt;
 
-[[back|Music]]</tw-passagedata><tw-passagedata pid="5" name="Samsara" tags="" position="600,0" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/samsara.png&quot;&gt;
+[[back|Music]]</tw-passagedata><tw-passagedata pid="5" name="Samsara" tags="" position="600,0" size="100,100">&lt;img src=&quot;img/samsara.png&quot;&gt;
 &lt;audio controls controlsList=&quot;nodownload&quot;&gt;
   &lt;source src=&quot;aud/samsarasong.wav&quot; type=&quot;audio/wav&quot;&gt;
 Your browser does not support the audio element.
 &lt;/audio&gt;
 
-[[back|Music]]</tw-passagedata><tw-passagedata pid="6" name="Metamorphage" tags="" position="600,200" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-&lt;img src=&quot;img/jackmiller.png&quot;&gt;
+[[back|Music]]</tw-passagedata><tw-passagedata pid="6" name="Metamorphage" tags="" position="600,200" size="100,100">&lt;img src=&quot;img/jackmiller.png&quot;&gt;
 &lt;audio controls controlsList=&quot;nodownload&quot;&gt;
   &lt;source src=&quot;aud/metamorphagesong.wav&quot; type=&quot;audio/wav&quot;&gt;
 Your browser does not support the audio element.
 &lt;/audio&gt;
 
-[[back|Music]]</tw-passagedata><tw-passagedata pid="7" name="Red King" tags="default" position="1000,600" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Main]]]
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
-Kyrie D&#39;Agostino
----
+[[back|Music]]</tw-passagedata><tw-passagedata pid="7" name="Red King" tags="default" position="1000,600" size="100,100">[[[back|Main]]]
 #(text-colour:red)[The Red King]
 
-[[►►►-&gt;Echoes]]</tw-passagedata><tw-passagedata pid="8" name="Echoes" tags="default" position="800,700" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Red King]]]
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
+# [[►►►-&gt;Echoes]]</tw-passagedata><tw-passagedata pid="8" name="Echoes" tags="default" position="800,700" size="100,100">[[back|Red King]]
 #Act I
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
 #&quot;Echoes&quot;
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
-[[►►►-&gt;Gray Suits]]</tw-passagedata><tw-passagedata pid="9" name="Gray Suits" tags="default" position="700,900" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Echoes]]]
+# [[►►►-&gt;Gray Suits]]</tw-passagedata><tw-passagedata pid="9" name="Gray Suits" tags="default" position="700,900" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Echoes]]]
 # CHAPTER I - GRAY SUITS
 
 The year is 1969.
