--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Your browser does not support the audio element.
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
 #&quot;Echoes&quot;
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
-# [[►►►-&gt;Gray Suits]]</tw-passagedata><tw-passagedata pid="9" name="Gray Suits" tags="default" position="700,900" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Echoes]]]
+# [[►►►-&gt;Gray Suits]]</tw-passagedata><tw-passagedata pid="9" name="Gray Suits" tags="default" position="700,900" size="100,100">[[back|Echoes]]
 # CHAPTER I - GRAY SUITS
 
 The year is 1969.
@@ -461,7 +461,7 @@ You know what&#39;s even funnier?
 
 Edelweiss sat alone after the meeting. Ten minutes. No movement.
 
-[[►►►-&gt;Katherina&#39;s Chapter]]</tw-passagedata><tw-passagedata pid="10" name="Katherina&#39;s Chapter" tags="default" position="900,1000" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Gray Suits]]]
+[[►►►-&gt;Katherina&#39;s Chapter]]</tw-passagedata><tw-passagedata pid="10" name="Katherina&#39;s Chapter" tags="default" position="900,1000" size="100,100">[[back|Gray Suits]]
 # CHAPTER II - KATHERINA
 
 Well, Dear Old Corporate won&#39;t like me telling you this, but nothing I do pleases, so may as well, if there&#39;s nothing that ends well...
@@ -536,7 +536,7 @@ But there was somethin&#39; that should&#39;ve weighed more on her mind.
 
 Freezing like a lollypop.
 
-[[►►►-&gt;Red In The Snow]]</tw-passagedata><tw-passagedata pid="11" name="Red In The Snow" tags="default" position="1100,900" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Katherina&#39;s Chapter]]]
+[[►►►-&gt;Red In The Snow]]</tw-passagedata><tw-passagedata pid="11" name="Red In The Snow" tags="default" position="1100,900" size="100,100">[[back|Katherina&#39;s Chapter]]
 # CHAPTER III - RED IN THE SNOW
 
 A crackle of lightning.
@@ -639,7 +639,7 @@ Something ancient. Something opposite.
 
 But not cruel.
 
-[[►►►-&gt;Bedtime Stories]]</tw-passagedata><tw-passagedata pid="12" name="Bedtime Stories" tags="default" position="1300,900" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Red In The Snow]]]
+[[►►►-&gt;Bedtime Stories]]</tw-passagedata><tw-passagedata pid="12" name="Bedtime Stories" tags="default" position="1300,900" size="100,100">[[back|Red In The Snow]]
 # CHAPTER IV - BEDTIME STORIES
 
 Once upon a time, there was an Emperor.
@@ -783,13 +783,13 @@ And so the Fool, now named and wandering and light enough to slip through the sp
 
 and became her emissary.
 
-[[►►►-&gt;Coronation]]</tw-passagedata><tw-passagedata pid="13" name="Coronation" tags="default" position="1300,700" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Bedtime Stories]]]
+[[►►►-&gt;Coronation]]</tw-passagedata><tw-passagedata pid="13" name="Coronation" tags="default" position="1300,700" size="100,100">[[back|Bedtime Stories]]
 (align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=XXX=&quot;)[=
 #Act II
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
 #&quot;Coronation&quot;
 (t8n:&quot;dissolve&quot;)+(t8n-time:1s)+(after: time + 3s)[=
-[[►►►-&gt;A Long Walk]]</tw-passagedata><tw-passagedata pid="14" name="A Long Walk" tags="default" position="1300,500" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;X=&quot;)[[[back|Coronation]]]
+[[►►►-&gt;A Long Walk]]</tw-passagedata><tw-passagedata pid="14" name="A Long Walk" tags="default" position="1300,500" size="100,100">[[back|Coronation]]
 # CHAPTER V - A LONG WALK
 
 It were a red hazy hue all over Venus.
@@ -1042,7 +1042,66 @@ MY SWEET HEART.&quot;**
 
 The storm bent around her as she slipped inside her shelter,
 and Venus would glow red once more,
-as if blushing with her.</tw-passagedata></tw-storydata>
+as if blushing with her.
+
+[[►►►-&gt;The Echo Game]]</tw-passagedata><tw-passagedata pid="15" name="The Echo Game" tags="" position="1300,300" size="100,100">[[back|A Long Walk]]
+# CHAPTER VI - THE ECHO GAME
+
+And so they&#39;d do many things together they would, in a union of planet and person—aye, even the dirty! How they did it I wouldn&#39;t know—and they&#39;d have many stories to tell their future offspring and so much love was shared between the two of them &#39;cross the creeping years. Both the gentle giant and the missus&#39; loneliness would be quelled, he&#39;d keep her warm and she&#39;d reciprocate not by temperature but by words. They&#39;d have built a foundation to call a home, but Katherina sometimes still had her doubts.
+
+Sometimes they&#39;d even fight.
+
+There were shaky nights sometimes. There&#39;d been moments of mutual distrust, but there were always a remedy, lovelies. It were the Echo Game.
+
+So whenever they&#39;d have shouted and bickered and shoved things and lost a bit of control, Kathy would sit back there, in that passenger seat, and she&#39;d tap her foot. The celestial body would reciprocate—he&#39;d learned how to lower his voice over the years, that by no longer speaking through the winds and the soils and the metals and such but rather by communicating in the static, the space between frequency, and send his radiowaves into the speaker of the standard on-board reckoner. That thing&#39;d whirr like crazy trying to process such an insurmountable thing, and sometimes fail it did, but the girl was a clever girl, and her gentle hands would fix it up with spare parts found in nooks and crannies all over.
+
+So there she&#39;d tap her foot, and the static would crackle. But not randomly, oh no-no-no, lovelies. It were an unspoken game, that it was, but they both knew the rules by heart. Katherina would be the conductor, the tap she&#39;d give would be the signal, and **MARS** a blind following fool to her whims. Given the cue, **MARS** would form a spotlight outside the car—don&#39;t worry, dears, for he was warming that eternal snow with his presence—and then she&#39;d come out and elegantly bow in the neck of it.
+
+The Echo Game were a simple thing. She&#39;d set the tone with her dance, and he&#39;d try to keep up with her via pulses of electricity and radiowaves he&#39;d sent through the various jury-rigged electronics she&#39;d keep &#39;round the car. There were the radio reckoner, there were the double monospeaker (something she wasn&#39;t even sure she had invented), there were the various holiday lights strewn around the place, there were piles and piles of big ol&#39; monitors. Cabling strewn about, but ain&#39;t none lead to some outlet or generator. If her voice broke or his echo lagged, the flow would falter, and they’d begin again, no winner named. The goal were harmony, a couple moments where, if for a few fleeting minutes, a woman small as her and a man big like him could be perfectly in tune with each other.
+
+Then she&#39;d come out the car, and she&#39;d stand in the midst of it all, and that were her stage, yes it were. And—why, I&#39;m making a fool of myself. I speak of it like it be some past thing, but here they are. They&#39;re at it once again. Let&#39;s go see, shall we not?
+
+Katherina begins to hum a soft melody, one not too dissimilar to something you&#39;d hear on the Old Earth. Her voice curled through the heavy air, a thread of hope offered to the entity crackling through the speaker. She swayed, her hips tracing gentle arcs, her tattered shift brushing her thighs. Each step was a call, her melody a star cast into the dark, daring **MARS** to answer. 
+
+The double monospeaker crackled, **MARS**’s voice rising, warm and teasing.
+**&quot;WHAT’S THIS, LITTLE GIRL? A SONG... FOR ME?&quot;**
+
+Her lips curved, a flicker of a smile, and she sang louder, notes curling up, up, up and away like rising smoke. &quot;Maybe&quot; she said, her voice soft but playful, testing the game’s edge. She spun slowly, arms lifting, fingers splaying to catch the red light, her shadow dancing alongside her. &quot;Can you keep up, my prince?&quot;
+
+**&quot;OH, I HEAR YOU, MY DEAR. 
+SING HIGHER,
+LET ME CHASE YOU.&quot;**
+
+His static pulsed in time, a low hum weaving through her melody, and she leaned into it, her steps quickening, hips swaying in gentle spirals. She danced faster, feet tracing the floor’s seams, her melody rising, weaving into the static. The light pulsed with her rhythm, the stage alive with their duet.
+
+“Faster, then... Don’t lag behind.”, she chaffs.
+
+She shifted the tempo, a subtle tease, slowing her steps to test if he’d follow *her* rhythm. Her hum dipped lower, notes trembling with longing, her arms arcing like wings. **MARS**’s static adjusted, a deep pulse matching her. His voice were coaxing:
+
+**&quot;CLEVER GIRL.
+YOU CHANGED THE GAME.
+YOU THINK YOU LEAD ME?&quot;**
+
+The monitors switched on, each one an eye of the **RED KING**, each one a silent envoy for his princess.
+
+“I... I might” she whispered, her voice barely audible, masked by her hum. The words were for herself only.
+
+There were times she&#39;d entrust her voice to him, for she simply didn&#39;t have the will to sing that night. Other times, she would grow curious and give a little more. It was a queer sensation—a cosmic beast burrowing himself inside her veins. Then she&#39;d say &quot;No sir, no sir, no more for today.&quot; An&#39; the prince would always back off then, virtuous as he were.
+
+Tonight, Kathy&#39;s beautiful own voice is on display. Her dance were flowing—feet tracing spirals, hips swaying, a silhouette against the sulfurous glow. “You want my heart?” she asked, her voice soft, playful, although her eyes drifted to try and peek, searching for a glow beyond his red haze.
+
+He&#39;d answer, fondly:
+**&quot;I WANT ALL OF YOU, MY PRINCESS.&quot;**
+
+She shifted the tempo again, slower, her steps deliberate, her melody a fragile thread. **MARS**’s static followed, but it felt heavier, as if pulling her into his rhythm.
+
+And it were then that they&#39;d reach that harmonic resonance we talked about. Her gracious movements came about to be once again perfectly in tune with **MARS**&#39;s light show &amp; pulsations.
+
+Satisfied, she spins one last time, then takes a deep bow as the electronics switch off and the presence returns to the car&#39;s reckoner. She makes her way back inside, and, still humming, shares a timid &quot;Iloveyou&quot; to her prince.
+
+Legs stretched, arms folding over herself, she drifts into sleep. A floating blanket descends, warm, tender, enveloping her.
+
+Tonight would be still.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
