--- a/index.html
+++ b/index.html
@@ -299,11 +299,16 @@ tw-passage audio {
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">document.head.insertAdjacentHTML(
   "beforeend",
   '<meta name="viewport" content="width=device-width, initial-scale=1">'
-);</script><tw-tag name="default" color="none"></tw-tag><tw-passagedata pid="1" name="Main" tags="" position="800,400" size="100,100">#The Red Archive
+);</script><tw-tag name="default" color="none"></tw-tag><tw-passagedata pid="1" name="Main" tags="" position="800,400" size="100,100">#The (text-colour:red)[Red] Archive
 
 (align:&quot;=&gt;&lt;=&quot;)[=
-^^[[see my pixel art &amp; songs|Music]]^^
-^^[[read the red king as it is rewritten|Red King]]^^</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">&lt;img src=&quot;img/thefool.png&quot;&gt;
+
+
+
+**there are (text-colour:red)[6] released chapters so far**
+
+[[read the red king|Red King]]
+[[see related songs &amp; artwork|Music]]</tw-passagedata><tw-passagedata pid="2" name="Fool" tags="" position="1000,100" size="100,100">&lt;img src=&quot;img/thefool.png&quot;&gt;
 &lt;audio controls controlsList=&quot;nodownload&quot;&gt;
   &lt;source src=&quot;aud/thefoolsong.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
 Your browser does not support the audio element.
